--- a/Frontend/proManager/src/components/Register/Register.module.css
+++ b/Frontend/proManager/src/components/Register/Register.module.css
@@ -15,26 +15,29 @@
 }
 
 .image {
-  width: 49.39%;
+  width: 50%;
   height: 49.39%;
-  /* margin-top: 19.24%; */
+  top: 19.2%;
+  position: relative;
 }
 .imageP1 {
   font-family: "Open Sans", sans-serif;
-  font-size: 33.08px;
+  font-size: 26.08px;
   font-weight: 600;
-  line-height: 66.15px;
+  line-height: 6.5%;
   text-align: center;
   color: #ffffff;
+  margin-top: 12%;
 }
 
 .imageP2 {
   font-family: "Open Sans", sans-serif;
-  font-size: 19.29px;
+  font-size: 15.29px;
   font-weight: 400;
-  line-height: 38.59px;
+  line-height: 3.7%;
   text-align: center;
   color: #ffffff;
+  margin-top: 3%;
 }
 /* ===================================================== */
 .rightSide {
@@ -49,59 +52,82 @@
 .title {
   color: #343434;
   font-family: "Open Sans", sans-serif;
-  font-size: 33.08px;
+  font-size: 26.08px;
   font-weight: 600;
-  line-height: 4.39%;
-  margin-top: 18%;
+  line-height: 45px;
+  position: relative;
+  top: 18.5%;
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  margin-top: 8.61%;
+  position: relative;
+  width: 100%;
+  margin-top: 29%;
+}
+
+.icons{
+  height: 17px;
+  position: relative;
+  left: 15%;
+}
+
+.icon1{
+  height: 17px;
+position: relative;
+left: -5%;
+}
+
+.icon2{
+  height: 17px;
+  position: relative;
+  left: -8%;
 }
 
 .input {
-  width: 73.6%;
-  height: 45px;
+  width: 66.6%;
+  height:85%;
   border-radius: 11.03px;
   border: 1.38px solid #d0d0d0;
   font-family: "Open Sans", sans-serif;
-  font-size: 19.29px;
+  font-size: 15.29px;
   font-weight: 400;
   margin-bottom: 22px;
-  margin-left: 13.16%;
+  margin-left: 10.16%;
+  padding-left: 37px !important;
 }
 
 .registerButton {
   width: 73.6%;
   background-color: #17a2b8;
   color: white;
-  height: 45px;
+  height: 40px;
   border-radius: 55.13px;
   cursor: pointer;
   margin-left: 13.16%;
+  margin-top: 4.3%;
 }
 
-.loginContainer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.loginText {
-  font-size: 14px;
-  color: #555;
+.registerText {
+  color: #828282;
+  font-family: Open Sans;
+  font-size: 15.29px;
+  font-weight: 400;
+  line-height: 26.28px;
+  text-align: left;
+  margin-left: 40.7%;
+  margin-top: 3.22%;
 }
 
 .loginButton {
   color: #17a2b8;
   cursor: pointer;
-  width: 480px;
-  height: 45px;
+  width: 73.6%;
+  height: 40px;
   border-radius: 55.13px;
   background-color: white;
   border: 1.38px solid #17a2b8;
-  margin-left: 13.16%;
-  margin-top: 20px; /* Added margin-top for spacing */
+  margin-left: 1.16%;
+  margin-top: 3.22%;
 }
