--- a/Frontend/proManager/src/components/Dashboard/Analytics/Analytics.module.css
+++ b/Frontend/proManager/src/components/Dashboard/Analytics/Analytics.module.css
@@ -1,36 +1,54 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");
+
+h1 {
+  font-family: Open Sans;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 29.96px;
+  text-align: left;
+}
 .container {
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;
-    background-color: #f8f9fa;
-  }
-  
-  .column {
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    width: 200px;
-  }
-  
-  .task {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-  }
-  
-  .dot {
-    height: 10px;
-    width: 10px;
-    background-color: #7ed6df;
-    border-radius: 50%;
-    display: inline-block;
-    margin-right: 10px;
-  }
-  
-  .count {
-    font-weight: bold;
-    margin-left: auto;
-  }
-  
+  display: flex;
+  font-family: Open Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24.51px;
+  text-align: left;
+  margin-top: 4%;
+  position: relative;
+  left: 3%;
+  height: 40%;
+}
+
+.column {
+  background-color: #ffffff;
+  border-radius: 8px;
+  padding-left: 2.4%;
+  padding-right: 2.4%;
+  width: 35.3%;
+  background-color: #F9FCFF;
+  margin-right: 1.3%;
+  padding-top: 4%;
+}
+
+.task {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5%;
+
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #90c4cc;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.count {
+  font-weight: bold;
+  margin-left: auto;
+}
