--- a/Frontend/proManager/src/components/Dashboard/Board/AddPeopleModal/AddPeople.module.css
+++ b/Frontend/proManager/src/components/Dashboard/Board/AddPeopleModal/AddPeople.module.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap");
+
 .modal {
     position: fixed;
     top: 0;
@@ -14,22 +17,91 @@
     background: white;
     padding: 20px;
     border-radius: 8px;
-    text-align: center;
+    /* text-align: center; */
+    height: 27.7%;
+    width: 42.4%;
   }
   
   .modalContent h2 {
     margin-bottom: 20px;
+    font-family: Noto Sans;
+font-size: 20px;
+font-weight: 600;
+line-height: 27.24px;
+text-align: left;
+margin-left: 7%;
+
   }
   
   .modalContent input {
     display: block;
-    margin: 0 auto 20px;
-    padding: 10px;
-    width: 80%;
+    width: 89.32%;
+    height: 19.71%;
+    border: 1px solid #767575;
+    border-radius: 10px;
+    font-family: Noto Sans;
+font-size: 15px;
+font-weight: 400;
+line-height: 27.24px;
+text-align: left;
+margin-left: 4.4%;
+padding-left: 15px;
+margin-top: 4.5%;
   }
+.buttonContainer{
+  height: 19.84%;
+  margin-left: 4.4%;
+  margin-top: 7.5%;
+
   
-  .modalContent button {
-    margin: 0 10px;
-    padding: 10px 20px;
-  }
+}  
+.cancle{
+  box-shadow: 0px 2px 12px 0px #82698C33;
+  border: 1px solid #CF3636;
+  color: #CF3636;
+  width: 45.1%;
+  height: 100%;
+  border-radius: 12px;
+  margin-right: 7%;
+  cursor: pointer;
+}
+
+.addEmail{
+  box-shadow: 0px 2px 12px 0px #82698C33;
+  background-color: #17A2B8;
+  color: white;
+  width: 45.1%;
+  height: 100%;
+  border-radius: 12px;
+  margin-right: 2%;
+  cursor: pointer;
+
+}
+
+.confirmText{
+  font-family: Noto Sans;
+font-size: 20px;
+font-weight: 600;
+line-height: 27.24px;
+text-align: center;
+margin-top: 6%;
+}
+
+.okButton{
+  box-shadow: 0px 2px 12px 0px #82698C33;
+  background-color: #17A2B8;
+  color: white;
+  width: 45.1%;
+  height: 21.84%;
+  border-radius: 12px;
+  cursor: pointer;
+  font-family: Poppins;
+font-size: 16px;
+font-weight: 600;
+line-height: 19px;
+text-align: center;
+margin-left: 27.66%;
+margin-top: 5.2%;
+
+}
   
