--- a/Frontend/proManager/src/components/Dashboard/Board/DateFilter/DateFilter.module.css
+++ b/Frontend/proManager/src/components/Dashboard/Board/DateFilter/DateFilter.module.css
@@ -1,35 +1,54 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+
 .dateFilter {
-    position: relative;
-    display: inline-block;
-  }
-  
-  .dropdownButton {
-    background-color: white;
-    border: 1px solid #ccc;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 16px;
-  }
-  
-  .dropdownMenu {
-    display: block;
-    position: absolute;
-    background-color: white;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    min-width: 160px;
-  }
-  
-  .dropdownItem {
-    padding: 12px 16px;
-    cursor: pointer;
-  }
-  
-  .dropdownItem:hover {
-    background-color: #f1f1f1;
-  }
-  
-  .hidden {
-    display: none;
-  }
-  
+  position: relative;
+  display: inline-block;
+}
+
+.dropdownButton {
+  background-color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+}
+
+.icons {
+  height: 10px;
+  width: 15px;
+}
+
+.dropdownMenu {
+  display: block;
+  position: absolute;
+  background-color: white;
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  min-width: 160px;
+  border-radius: 12px;
+  position: absolute;
+    right: 18%;
+}
+
+.dropdownItem {
+  padding: 12px 16px;
+  cursor: pointer;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+}
+
+.dropdownItem:hover {
+  background-color: #f1f1f1;
+}
+
+.hidden {
+  display: none;
+}
