--- a/Frontend/proManager/src/components/Dashboard/Dashboard.module.css
+++ b/Frontend/proManager/src/components/Dashboard/Dashboard.module.css
@@ -1,23 +1,29 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+
 
 .app {
   display: flex;
 }
 
 .sidebar {
-  width: 224px;
+  width: 14.3%;
   height: 100vh;
-  background-color: #f4f4f4;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
   /* padding: 20px; */
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
-
+.sidebarItem.active {
+  background-color: #4391ed1a;
+  color: #000;
+}
 .sidebarHeader {
   margin-bottom: 30px;
   display: flex;
+  margin-top: 8.83%;
 }
 
 .sidebarHeading {
@@ -30,7 +36,6 @@
 
 .sidebarMenu {
   width: 100%;
-  align-items: center;
 }
 
 .sidebarItem {
@@ -45,18 +50,31 @@
   text-align: left;
   cursor: pointer;
   transition: background-color 0.3s;
-  color: #707070;
 }
 
 .sidebarItem:hover {
-  background-color: #e0e0e0;
+  background-color: #4391ed1a;
 }
-
+.sidebarIconH {
+  margin-right: 10px;
+  font-size: 1.2em;
+  width: 24px;
+  height: 24px;
+}
 .sidebarIcon {
   margin-right: 10px;
   font-size: 1.2em;
   width: 24px;
   height: 24px;
+  margin-left: 17%;
+}
+
+.sidebarText {
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
 }
 
 .logoutButton {
@@ -65,29 +83,33 @@
   padding: 15px;
   font-size: 1em;
   cursor: pointer;
-  color: white;
   border: none;
   border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #CF3636;
+  color: #cf3636;
+  background-color: #ffffff;
+  margin-bottom: 8.2%;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
 }
 
 .logoutIcon {
   margin-right: 10px;
   font-size: 1.2em;
+  width: 24px;
+  height: 24px;
+  margin-left: -16%;
 }
 
 .content {
   flex: 1;
   padding: 20px;
+  overflow-x: auto;
+  width: 100%;
 }
-.contentH{
-  font-family: Open Sans;
-font-size: 22px;
-font-weight: 600;
-line-height: 29.96px;
-text-align: left;
-color: #000000;
-}
+
