--- a/Frontend/proManager/src/components/Dashboard/Settings/Settings.module.css
+++ b/Frontend/proManager/src/components/Dashboard/Settings/Settings.module.css
@@ -1,30 +1,67 @@
-.formContainer {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    width: 300px;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap");
+
+h1 {
+  font-family: Open Sans;
+  font-size: 22px;
+  font-weight: 600;
+  line-height: 29.96px;
+  text-align: left;
+  margin-left: 3.3%;
 }
+
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 4%;
+}
+
 
 .formInput {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
+  width: 36.6%;
+  height: 4rem;
+  border-radius: 11px;
+  border: 1.5px solid #d0d0d0;
+  font-family: Open Sans;
+  font-size: 19.29px;
+  font-weight: 400;
+  line-height: 26.28px;
+  margin-bottom: 1%;
+  margin-left: 2.16%;
+  padding-left: 4.5%;
 }
 
+.icons{
+    height: 27px;
+    width: 17px;
+    position: relative;
+    left: 5%;
+  }
+  
+  .icon1{
+    height: 17px;
+  position: relative;
+  left: -3%;
+  }
+  
+  .icon2{
+    height: 17px;
+    position: relative;
+    left: -8%;
+  }
+
 .updateButton {
-    background-color: #00a1e0;
-    color: #fff;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    font-size: 16px;
-    cursor: pointer;
+  width: 41.4%;
+  background-color: #17a2b8;
+  color: white;
+  height: 3.3rem;
+  border-radius: 55px;
+  cursor: pointer;
+  margin-left: 3.16%;
+  margin-top: 1.3%;
+  transition: background-color 0.3s ease;
 }
 
 .updateButton:hover {
-    background-color: #008bb5;
+  background-color: #008bb5;
 }
