--- a/Frontend/proManager/src/components/Dashboard/Board/AddPeopleModal/AddPeople.module.css
+++ b/Frontend/proManager/src/components/Dashboard/Board/AddPeopleModal/AddPeople.module.css
@@ -56,7 +56,7 @@ margin-top: 4.5%;
   
 }  
 .cancle{
-  box-shadow: 0px 2px 12px 0px #82698C33;
+  
   border: 1px solid #CF3636;
   color: #CF3636;
   width: 45.1%;
@@ -64,10 +64,11 @@ margin-top: 4.5%;
   border-radius: 12px;
   margin-right: 7%;
   cursor: pointer;
+  background-color: white;
 }
 
 .addEmail{
-  box-shadow: 0px 2px 12px 0px #82698C33;
+  
   background-color: #17A2B8;
   color: white;
   width: 45.1%;
