--- a/Frontend/proManager/src/components/Dashboard/Board/Cards/Cards.module.css
+++ b/Frontend/proManager/src/components/Dashboard/Board/Cards/Cards.module.css
@@ -25,7 +25,7 @@
 }
 
 .priorityIndicator {
-  width: 9px;
+  width: 13px;
   height: 9px;
   border-radius: 50%;
   margin-right: 10px;
@@ -56,8 +56,8 @@ width: 100%;
 
 .assignUserIndicator {
   
-  background-color: #DBDBDB;
-  color: #5A5A5A;
+  background-color: #FFEBEB;
+  color: #000000;
   padding: 5px;
   width: 15px;
   height: 15px;
