--- a/Frontend/proManager/src/components/Dashboard/Board/AddTaskModal/AddTaskModal.module.css
+++ b/Frontend/proManager/src/components/Dashboard/Board/AddTaskModal/AddTaskModal.module.css
@@ -303,6 +303,9 @@ text-align: left;
   display: relative;
   color: #707070;
 }
+.invisible {
+  visibility: hidden;
+}
 
 .hiddenDateInput {
   display: flex; /* Assuming this is used for handling date selection but hidden visually */
