--- a/Frontend/proManager/src/components/PublicLink/PublicLink.module.css
+++ b/Frontend/proManager/src/components/PublicLink/PublicLink.module.css
@@ -172,6 +172,8 @@ margin-right: 2%;
     width: 95%;
     margin: 20px auto;
     padding: 10px;
+    margin-top: 7.32%;
+  margin-left: 29.1%;
   }
 
   .header {
