--- a/Frontend/proManager/src/components/PublicLink/PublicLink.module.css
+++ b/Frontend/proManager/src/components/PublicLink/PublicLink.module.css
@@ -176,8 +176,7 @@ margin-right: 2%;
   }
 
   .header {
-    flex-direction: column;
-    align-items: flex-start;
+   display: flex;
   }
 
   .heroSection {
