--- a/Frontend/proManager/src/components/PublicLink/PublicLink.module.css
+++ b/Frontend/proManager/src/components/PublicLink/PublicLink.module.css
@@ -180,6 +180,11 @@ margin-right: 2%;
    margin-top: 6%;
   }
 
+  .sidebarIcon {
+    margin-top: 2.2%;
+    margin-left: 2.7%;
+  }
+
   .heroSection {
     font-size: 1.2em;
   }
