--- a/Frontend/proManager/src/components/PublicLink/PublicLink.module.css
+++ b/Frontend/proManager/src/components/PublicLink/PublicLink.module.css
@@ -141,6 +141,7 @@ line-height: 19.36px;
 text-align: left;
 border: 1px solid #E2E2E2;
 border-radius: 12px;
+margin-left: -2%;
 }
 
 .checklistItem input {
