--- a/Frontend/proManager/src/components/PublicLink/PublicLink.module.css
+++ b/Frontend/proManager/src/components/PublicLink/PublicLink.module.css
@@ -42,6 +42,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 10px;
+  margin-left: 1%;
 }
 
 .priorityIndicator {
@@ -79,6 +80,7 @@ font-weight: 500;
 line-height: 33px;
 text-align: left;
 color: black;
+margin-left: 1%;
 }
 
 h3{
@@ -88,6 +90,7 @@ font-weight: 500;
 line-height: 16.94px;
 text-align: left;
 margin-bottom: 3%;
+margin-left: 1%;
 }
 
 .checklistContainer {
