--- a/Frontend/proManager/src/components/Dashboard/Board/Cards/Cards.module.css
+++ b/Frontend/proManager/src/components/Dashboard/Board/Cards/Cards.module.css
@@ -129,6 +129,10 @@ text-align: left;
   margin: 10px 0;
 }
 
+.cardTitle:hover .tooltip {
+  display: block;
+}
+
 .tooltip {
   display: none;
   position: absolute;
