--- a/Frontend/proManager/src/components/Dashboard/Board/Cards/Cards.module.css
+++ b/Frontend/proManager/src/components/Dashboard/Board/Cards/Cards.module.css
@@ -121,12 +121,29 @@ color: #CF3636;
 
 .cardTitle {
   font-family: Poppins;
-font-size: 18px;
-font-weight: 500;
-line-height: 27px;
-text-align: left;
-
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 27px;
+  text-align: left;
   margin: 10px 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  position: relative;
+}
+
+.cardTitle::after {
+  content: '...';
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: white;
+  padding: 0 5px;
+  z-index: 1;
+}
+
+.cardTitle:hover::after {
+  content: ''; /* Remove dots on hover */
 }
 
 .cardTitle:hover .tooltip {
