--- a/Frontend/proManager/src/components/Dashboard/Board/Cards/Cards.module.css
+++ b/Frontend/proManager/src/components/Dashboard/Board/Cards/Cards.module.css
@@ -139,9 +139,9 @@ color: #CF3636;
   z-index: 1;
 }
 
-.cardTitle:hover::after {
+/* .cardTitle:hover::after {
   content: ''; 
-}
+} */
 
 .cardTitle:hover .tooltip {
   display: block;
